Fixed Alignment

--- a/styles.css
+++ b/styles.css
@@ -47,7 +47,6 @@ content {
   grid-area: content;
   display: flex;
   grid-gap: 1.5em;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
